# colay

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml  package.json
.github/workflows/: ci.yml  codex-main-compat.yml  codex-release-compat.yml  release.yml
compatibility/: codex-matrix.json  codex-version.toml
compatibility/codex/: README.md
crates/codex-compat/: Cargo.toml
crates/codex-compat/src/: adapter.rs  app_server.rs  capability.rs  event.rs  invocation.rs  lib.rs  registry.rs
crates/codex-compat/tests/: contracts.rs
crates/orchestrator-cli/: Cargo.toml
crates/orchestrator-cli/src/: app.rs  args.rs  chat_tui.rs  conversation_orchestrator.rs  daemon.rs  lib.rs  main.rs  profile_config.rs  task_executor.rs  task_planner.rs
crates/orchestrator-cli/tests/: chat_conversation_fake_provider.rs  chat_plan_approval.rs  chat_plan_fake_provider.rs  chat_tui_reconnect.rs  daemon_lifecycle.rs  default_startup.rs  fake_cli_handover_e2e.rs  parallel_task_execution.rs
crates/orchestrator-daemon/: Cargo.toml
crates/orchestrator-daemon/src/: commands.rs  conversation.rs  execution.rs  integration.rs  lib.rs  planning.rs
crates/orchestrator-daemon/tests/: conversation_flow.rs  result_integration.rs
crates/orchestrator-domain/: Cargo.toml
crates/orchestrator-domain/src/: assessment.rs  checkpoint.rs  conversation.rs  event.rs  evidence.rs  graph.rs  handover.rs  ids.rs  integration.rs  integrity.rs  lib.rs  path.rs  provider.rs  routing.rs  scheduling.rs  schema.rs  session.rs  state.rs  task.rs  usage.rs  verification.rs
crates/orchestrator-domain/tests/: conversation_contract.rs  persisted_schema_readers.rs
crates/orchestrator-engine/: Cargo.toml
crates/orchestrator-engine/src/: checkpoint.rs  conversation.rs  coordinator.rs  error.rs  executor.rs  handover.rs  integration.rs  lib.rs  planner.rs  rollback.rs  startup.rs  verification.rs  worktree.rs
crates/orchestrator-engine/tests/: conversation_collector.rs
crates/orchestrator-policy/: Cargo.toml
crates/orchestrator-policy/src/: analyzer.rs  budget.rs  lib.rs  period.rs  routing.rs
crates/orchestrator-process/: Cargo.toml
crates/orchestrator-process/src/: executable.rs  git.rs  jsonl.rs  lib.rs  redaction.rs  runner.rs
crates/orchestrator-providers/: Cargo.toml
crates/orchestrator-providers/src/: adapter.rs  agy.rs  claude.rs  codex.rs  error.rs  gemini.rs  lib.rs  normalize.rs  process_runtime.rs  usage_probe.rs
crates/orchestrator-state/: Cargo.toml
crates/orchestrator-state/src/: artifacts.rs  client_commands.rs  config.rs  config_layers.rs  conversations.rs  daemon_instances.rs  database.rs  error.rs  event_log.rs  graphs.rs  instructions.rs  integrations.rs  leases.rs  lib.rs  migrations.rs  paths.rs  permissions.rs  records.rs  scheduling.rs  sessions.rs  workspace.rs
crates/orchestrator-state/tests/: config_migration.rs  conversations.rs  graphs.rs  migration_contract.rs
crates/orchestrator-test-support/: Cargo.toml
crates/orchestrator-test-support/src/: lib.rs  runtime.rs
crates/orchestrator-test-support/tests/: codex_app_server_transport.rs  multi_provider_handover_e2e.rs  provider_e2e.rs
crates/orchestrator-tui/: Cargo.toml
crates/orchestrator-tui/src/: lib.rs
crates/orchestrator-tui/src/chat/: input.rs  layout.rs  mod.rs  model.rs  render.rs  runtime.rs  state.rs
docs/: architecture.md  compatibility.md  migrations.md  operations.md  release.md  rollback.md  security.md  testing.md  threat-model.md
docs/adr/: 0001-independent-workspace-and-ports.md  0002-state-events-and-dual-persistence.md
docs/qa/: wsl-nightly-error-tracker.md
docs/superpowers/audits/: 2026-07-21-approved-result-integration-phase5.md  2026-07-21-approved-task-graph-phase3.md  2026-07-21-chat-first-tui-phase2.md  2026-07-21-durable-session-daemon-phase1.md  2026-07-21-parallel-task-execution-phase4.md
docs/superpowers/plans/: 2026-07-19-ci-permissions-fix.md  2026-07-19-layered-configuration-windows-resolution-codex-01446.md  2026-07-19-multi-os-npm-release-channels.md  2026-07-20-provider-model-profile-presets.md  2026-07-21-agy-provider.md  2026-07-21-approved-result-integration.md  2026-07-21-approved-task-graph-planning.md  2026-07-21-chat-first-tui.md  2026-07-21-durable-session-daemon.md  2026-07-21-parallel-task-execution.md  2026-07-22-conversation-first-plan-mode.md  2026-07-22-daemon-startup-recovery.md  2026-07-22-git-readiness-preflight.md  2026-07-22-provider-lease-recovery.md  2026-07-22-sqlite-idle-writer-starvation.md
docs/superpowers/specs/: 2026-07-19-ci-permissions-fix-design.md  2026-07-19-layered-configuration-windows-resolution-codex-01446-design.md  2026-07-19-multi-os-npm-release-channels-design.md  2026-07-20-chat-task-orchestration-tui-design.md  2026-07-20-provider-model-profile-presets-design.md  2026-07-21-agy-provider-design.md  2026-07-22-conversation-first-plan-mode-design.md  2026-07-22-daemon-startup-recovery-design.md
examples/: task.example.json
fixtures/codex/: exec-help.txt  jsonl-error.jsonl  jsonl-success.jsonl  jsonl-tool-call.jsonl  malformed-events.jsonl  quota-error.jsonl  resume-events.jsonl
fixtures/providers/claude/: quota-error.jsonl  stream-success.jsonl
fixtures/providers/gemini/: quota-error.jsonl  stream-success.jsonl
migrations/: 0001_core.sql  0002_execution.sql  0003_audit_and_control.sql  0004_durable_sessions.sql  0005_chat_workspace_state.sql  0006_approved_task_graphs.sql  0007_parallel_execution.sql  0008_result_integration.sql  0009_daemon_startup_phase.sql  0010_conversation_first_planning.sql  0011_session_validation_and_provider_compat.sql
npm/colay/: package.json
npm/colay-darwin-arm64/: package.json
npm/colay-linux-x64/: LICENSE  package.json
npm/colay-win32-x64/: package.json
npm/colay/lib/: launcher.cjs
npm/colay/test/: launcher.test.cjs
scripts/: build_compat_report.py  generate_codex_matrix.py
scripts/release/: metadata.mjs  notes.mjs  publish.mjs  smoke.mjs  stage.mjs
scripts/release/test/: license-contract.test.mjs  metadata.test.mjs  notes.test.mjs  publish.test.mjs  (+3 more)
(+32 files in other folders)
