[workspace]
members = [
    "crates/orchestrator-domain",
    "crates/orchestrator-policy",
    "crates/orchestrator-state",
    "crates/orchestrator-daemon",
    "crates/orchestrator-process",
    "crates/codex-compat",
    "crates/orchestrator-providers",
    "crates/orchestrator-engine",
    "crates/orchestrator-cli",
    "crates/orchestrator-tui",
    "crates/orchestrator-test-support",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Enterprise Developer Tooling Team"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
fs2 = "0.4"
hex = "0.4"
libc = "0.2"
ratatui = "0.29"
regex = "1"
rusqlite = { version = "0.37", features = ["backup", "bundled", "chrono", "uuid"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.9"
toml_edit = { version = "0.23", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v7"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

