[package]
name = "orchestrator-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
orchestrator-domain = { path = "../orchestrator-domain" }
orchestrator-state = { path = "../orchestrator-state" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
