[package]
name = "orchestrator-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
orchestrator-domain = { path = "../orchestrator-domain" }
orchestrator-engine = { path = "../orchestrator-engine" }
orchestrator-state = { path = "../orchestrator-state" }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true

[lints]
workspace = true
