[package]
name = "orchestrator-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
codex-compat = { path = "../codex-compat" }
orchestrator-domain = { path = "../orchestrator-domain" }
orchestrator-process = { path = "../orchestrator-process" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
