[package]
name = "orchestrator-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true

